--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,8 @@ body:after {
 }
 
 .btn.btn-primary {
-    background: #007bff;
-    border-color: #007bff;
+    background: #16793c;
+    border-color: #16793c;
     color: #fff;
 }
 
@@ -132,7 +132,7 @@ body:after {
 
 .form-control:active,
 .form-control:focus {
-    border-color: #007bff;
+    border-color: #16793c;
 }
 
 .form-control:hover,
@@ -363,7 +363,7 @@ body:after {
 }
 
 .ul-check.primary li:before {
-    color: #007bff;
+    color: #16793c;
 }
 
 .ul-check li.remove {
@@ -422,7 +422,7 @@ body:after {
 }
 
 .site-navbar .site-navigation .site-menu .active {
-    color: #007bff;
+    color: #16793c;
     display: inline-block;
     padding: 5px 20px;
 }
@@ -444,7 +444,7 @@ body:after {
 }
 
 .site-navbar .site-navigation .site-menu>li>a:hover {
-    color: #007bff;
+    color: #16793c;
 }
 
 .site-navbar .site-navigation .site-menu .has-children {
@@ -474,7 +474,7 @@ body:after {
     top: 100%;
     position: absolute;
     text-align: left;
-    border-top: 2px solid #007bff;
+    border-top: 2px solid #16793c;
     -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
     padding: 0px 0;
@@ -518,7 +518,7 @@ body:after {
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active {
-    color: #007bff !important;
+    color: #16793c !important;
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown>li {
@@ -552,7 +552,7 @@ body:after {
 .site-navbar .site-navigation .site-menu .has-children:hover>a,
 .site-navbar .site-navigation .site-menu .has-children:focus>a,
 .site-navbar .site-navigation .site-menu .has-children:active>a {
-    color: #007bff;
+    color: #16793c;
 }
 
 .site-navbar .site-navigation .site-menu .has-children:hover,
@@ -663,7 +663,7 @@ body:after {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-    color: #007bff;
+    color: #16793c;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -672,7 +672,7 @@ body:after {
 }
 
 .site-mobile-menu .site-nav-wrap li .active {
-    color: #007bff;
+    color: #16793c;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -814,7 +814,7 @@ body:after {
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-logo a {
-    color: #007bff;
+    color: #16793c;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a {
@@ -823,7 +823,7 @@ body:after {
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a.active {
-    color: #007bff !important;
+    color: #16793c !important;
 }
 
 .sticky-wrapper .shrink {
@@ -1114,7 +1114,7 @@ body:after {
 
 .site-block-tab .nav-item>a:hover,
 .site-block-tab .nav-item>a.active {
-    border-bottom: 2px solid #007bff;
+    border-bottom: 2px solid #16793c;
     color: #000;
 }
 
@@ -1245,7 +1245,7 @@ body:after {
 }
 
 .slide-one-item .owl-dots .owl-dot.active span {
-    background: #007bff;
+    background: #16793c;
 }
 
 .block-12 {
@@ -1323,7 +1323,7 @@ body:after {
     width: 80px;
     height: 4px;
     margin-top: -4px;
-    background: #007bff;
+    background: #16793c;
     top: 0;
 }
 
@@ -1351,7 +1351,7 @@ body:after {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #007bff !important;
+    color: #16793c !important;
 }
 
 .block-16 figure .play-button:hover {
@@ -1400,7 +1400,7 @@ body:after {
 }
 
 .block-25 ul li a .meta {
-    color: #007bff;
+    color: #16793c;
 }
 
 .block-25 ul li a:hover img {
@@ -1439,7 +1439,7 @@ body:after {
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #007bff;
+    background: #16793c;
     border-radius: 50%;
     color: #fff;
 }
@@ -1489,7 +1489,7 @@ body:after {
 
 .site-block-27 ul li.active a,
 .site-block-27 ul li.active span {
-    background: #007bff;
+    background: #16793c;
     color: #fff;
     border: 1px solid transparent;
 }
@@ -1622,7 +1622,7 @@ body:after {
 }
 
 .h-entry h2 a:hover {
-    color: #007bff;
+    color: #16793c;
 }
 
 .overlap-left {
@@ -1642,7 +1642,7 @@ body:after {
 .feature-1,
 .free-quote,
 .feature-3 {
-    background: #007bff;
+    background: #16793c;
     padding: 30px 50px;
     color: rgba(255, 255, 255, 0.6);
     font-size: 15px;
@@ -1742,7 +1742,7 @@ body:after {
     bottom: 0;
     width: 80px;
     height: 3px;
-    background: #007bff;
+    background: #16793c;
 }
 
 .border-primary.text-center:after {
@@ -1788,7 +1788,7 @@ body:after {
 .how-it-work-item .number {
     width: 50px;
     height: 50px;
-    background: #007bff;
+    background: #16793c;
     color: #fff;
     line-height: 55px;
     font-weight: 300;
@@ -1859,7 +1859,7 @@ body:after {
     line-height: 40px;
     border-radius: 50%;
     display: inline-block;
-    background: #007bff;
+    background: #16793c;
     color: #fff;
 }
 
@@ -1942,7 +1942,7 @@ body:after {
 }
 
 .popular-category:hover {
-    background: #007bff;
+    background: #16793c;
     -webkit-box-shadow: 0 5px 30px -5px rgba(0, 123, 255, 0.5);
     box-shadow: 0 5px 30px -5px rgba(0, 123, 255, 0.5);
 }
@@ -2012,7 +2012,7 @@ body:after {
     font-size: 12px;
     display: inline-block;
     padding: 5px 30px;
-    background: #007bff;
+    background: #16793c;
     border-radius: 30px;
     color: #fff;
     letter-spacing: .2em;
@@ -2068,7 +2068,7 @@ body:after {
 }
 
 .accordion-item[aria-expanded="true"] {
-    color: #007bff;
+    color: #16793c;
 }
 
 .social-media {
@@ -2120,7 +2120,7 @@ body:after {
     display: inline-block;
     width: 50px;
     height: 50px;
-    background: #007bff;
+    background: #16793c;
     margin-right: 1.5rem;
     border-radius: 50%;
     line-height: 50px;
@@ -2266,13 +2266,13 @@ body:after {
 
 .section-sub-title {
     font-size: 13px;
-    color: #007bff;
+    color: #16793c;
     letter-spacing: .2em;
     text-transform: uppercase;
 }
 
 .section-title {
-    color: #007bff;
+    color: #16793c;
     font-size: 40px;
     font-weight: 900;
 }
@@ -2291,7 +2291,7 @@ body:after {
     position: absolute;
     bottom: -10px;
     right: -10px;
-    background: #007bff;
+    background: #16793c;
     padding: 20px;
 }
 
@@ -2403,7 +2403,7 @@ body:after {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    background: #007bff;
+    background: #16793c;
 }
 
 .team-member .social li {
@@ -2447,7 +2447,7 @@ body:after {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     display: inline-block;
-    background: #007bff;
+    background: #16793c;
 }
 
 @media (max-width: 991.98px) {
@@ -2546,14 +2546,14 @@ body:after {
 
 .filters .btn:hover {
     border-color: transparent;
-    background: #007bff;
+    background: #16793c;
     color: #fff;
 }
 
 .filters .btn.active {
-    background: #007bff !important;
+    background: #16793c !important;
     color: #fff;
-    border-color: #007bff !important;
+    border-color: #16793c !important;
 }
 
 .pricing {
@@ -2567,7 +2567,7 @@ body:after {
 
 .pricing .price>span>span {
     font-size: 3rem;
-    color: #007bff;
+    color: #16793c;
 }
 
 .pricing ul li {
@@ -2888,7 +2888,7 @@ figure figcaption {
     right: auto;
     height: 100%;
     width: 3px;
-    background: #007bff;
+    background: #16793c;
     z-index: 0; */
     text-align: left;
     color: black;
