--- a/css/bootstrap/bootstrap-reboot.css
+++ b/css/bootstrap/bootstrap-reboot.css
@@ -104,11 +104,11 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: #16793c;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #0056b3;
+    color: #042912;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
