--- a/css/style.css
+++ b/css/style.css
@@ -2073,7 +2073,7 @@ body:after {
 
 .social-media {
     display: inline-block;
-    float: left;
+    float: none;
     margin-bottom: 0px;
     padding: 0;
 }
