--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     font-size: 1rem;
 }
 
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
 ::-moz-selection {
     background: #000;
     color: #fff;
