--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 iframe {
-    /* width:350px; height:536px;  */
-    width: 100%; height: 300%;
+    width:1000px; height:3000px; 
+    /* width: 100%; height: 300%; */
 }
 
 ::-moz-selection {
