--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 iframe {
-    width:700px; height:1000px; 
+    /* width:700px; height:1000px; */
+    width:350px; height:500px; 
     /* width: 100%; height: 300%; */
 }
 
