--- a/css/style.css
+++ b/css/style.css
@@ -409,10 +409,11 @@ body:after {
 /* Navbar */
 
 .site-navbar {
-    margin-bottom: 0px;
-    z-index: 1999;
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1999;
     width: 100%;
     border-bottom: rgba(255, 255, 255, 0.7);
 }
