--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,11 @@ body:after {
     z-index: 10000; /* Make sure it's above everything else */
     background-color: white; /* Or match your header background */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional, gives a nice shadow */
-  }
+}
+
+.site-navbar-target .nav {
+    display: none !important;
+}
 
 .site-navbar .site-logo {
     position: relative;
