--- a/css/style.css
+++ b/css/style.css
@@ -547,7 +547,8 @@ body:after {
     list-style: none;
     padding: 0;
     margin: 0;
-    min-width: 210px;
+    min-width: 250px;
+    white-space: nowrap; /* <-- important: keep text in one line */
 }
 
 .site-navbar .site-navigation .site-menu .has-children .dropdown>li>a {
