--- a/css/style.css
+++ b/css/style.css
@@ -425,8 +425,8 @@ body:after {
     right: 0;
     z-index: 10000; /* Make sure it's above everything else */
     width: 100%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: white; /* Or match your header background */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional, gives a nice shadow */
 }
@@ -458,8 +458,8 @@ body:after {
 
 .site-navbar .site-navigation .site-menu>li>a {
     /* padding: 5px 20px; */
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     color: #000;
     display: inline-block;
     text-decoration: none !important;
@@ -500,6 +500,7 @@ body:after {
     -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
     padding: 0px 0;
+    min-width: 300px;
     margin-top: 20px;
     margin-left: 0px;
     background: #fff;
